--- a/package.json
+++ b/package.json
@@ -25,22 +25,24 @@
     "ipfs-unixfs": "6.0.6"
   },
   "dependencies": {
-    "ethers": "^5.7.2",
     "@ethersproject/bytes": "^5.7.0",
     "@polkadot/api-augment": "^9.13.4",
     "@polkadot/types": "^9",
+    "@polkadot/util-crypto": "^10.3.1",
+    "ethers": "^5.7.2",
     "moonbeam-types-bundle": "^2.0.7"
   },
   "devDependencies": {
     "@polkadot/api": "^9",
     "@subql/cli": "1.11.0",
-    "@subql/types": "1.7.1",
     "@subql/frontier-evm-processor": "0.1.2",
+    "@subql/types": "1.7.1",
     "@terra-money/terra.js": "^3.0.8",
     "tslib": "^2.5.0",
     "typescript": "4.3.2"
   },
   "exports": {
+    "frontierEvm": "./node_modules/@subql/frontier-evm-processor/dist/index.js",
     "chaintypes": "src/chaintypes.ts"
   }
 }
