--- a/project.yaml
+++ b/project.yaml
@@ -19,20 +19,25 @@ network:
   chaintypes:
     file: ./dist/chaintypes.js
 dataSources:
-  # - kind: substrate/Runtime
-  #   # startBlock: 208196
-  #   startBlock: 876424
-  #   mapping:
-  #     file: ./dist/index.js
-  #     handlers:
-  #       - handler: handleBlock
-  #         kind: substrate/BlockHandler
-  - kind: substrate/FrontierEvm
-    startBlock: 876424
-    processor:
-      file: "./node_modules/@subql/frontier-evm-processor/dist/bundle.js"
+  - kind: substrate/Runtime
+    # startBlock: 208196
+    startBlock: 1081261
     mapping:
       file: ./dist/index.js
       handlers:
-        - handler: handleMoonbeamCall
-          kind: substrate/FrontierEvmCall
+        - handler: handleBlock
+          kind: substrate/BlockHandler
+        - handler: handleTransferEvent
+          kind: substrate/EventHandler
+          filter:
+            module: balances
+            method: Transfer
+  # - kind: substrate/FrontierEvm
+  #   startBlock: 1391892
+  #   processor:
+  #     file: "./node_modules/@subql/frontier-evm-processor/dist/bundle.js"
+  #   mapping:
+  #     file: ./dist/index.js
+  #     handlers:
+  #       - handler: handleFrontierEvmCall
+  #         kind: substrate/FrontierEvmCall
